Added new product endpoints
